[package]
name = "cyme"
authors = ["John Whittington <john@jbrengineering.co.uk>"]
description = "List system USB buses and devices; a modern cross-platform `lsusb`"
repository = "https://github.com/tuna-f1sh/cyme"
readme = "README.md"
license = "GPL-3.0-or-later"
version = "1.7.0"
edition = "2021"
keywords = ["usb", "lsusb", "system_profiler", "macos", "libusb"]
categories = ["command-line-utilities"]
exclude = [".github"]

[dependencies]
clap = { version = "4.0.22", features = ["derive", "wrap_help"] }
colored = "2.0.0"
itertools = "0.10.5"
lazy_static = "1.4.0"
rusb = { version = "0.9.4", optional = true }
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.87"
serde_with = "2.0.1"
simple_logger = "4.0.0"
usb-ids = { version = "1" }
heck = "0.4.0"
clap_complete = { version = "4.0.6", optional = true }
clap_mangen = { version = "0.2.5", optional = true }
dirs = "4.0.0"
rand = "0.8.5"
terminal_size = "0.2.5"
strum = "0.24.1"
strum_macros = "0.24.3"
regex = "1.10.5"

[dev-dependencies]
diff = "0.1"
assert-json-diff = "2.0.2"

[target.x86_64-unknown-linux-gnu.dependencies]
udevrs = { version = "^0.3.0", optional = true }
udevlib = { package = "udev", version = "^0.8.0", optional = true }
rusb = "0.9.4"

[target.arm-unknown-linux-gnueabihf.dependencies]
udevrs = { version = "^0.3.0", optional = true }
udevlib = { package = "udev", version = "^0.8.0", optional = true }
rusb = "0.9.4"

[target.aarch64-unknown-linux-gnu.dependencies]
udevrs = { version = "^0.3.0", optional = true }
udevlib = { package = "udev", version = "^0.8.0", optional = true }
rusb = "0.9.4"

[features]
libusb = ["dep:rusb"]
udev = ["libusb", "dep:udevrs"]
udev_hwdb = ["libusb", "udevlib?/hwdb"]
# libudev C binding
udevlib = ["libusb", "dep:udevlib"]
usb_test = []
cli_generate = ["dep:clap_complete", "dep:clap_mangen"] # for generating man and completions
default = ["libusb", "udev"]

[[bin]]
name = "cyme"
path = "src/main.rs"

[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1 # quicker binary, slower build

[package.metadata.cross.target.arm-unknown-linux-gnueabihf]
pre-build = ["dpkg --add-architecture armhf && apt-get update && apt-get install --assume-yes libusb-1.0-0-dev:armhf libudev-dev:armhf"]

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = ["dpkg --add-architecture arm64 && apt-get update && apt-get install --assume-yes libusb-1.0-0-dev:arm64 libudev-dev:arm64"]

[package.metadata.cross.target.i686-unknown-linux-gnu]
pre-build = ["dpkg --add-architecture i386 && apt-get update && apt-get install --assume-yes libusb-1.0-0-dev:i386 libudev-dev:i386"]

[package.metadata.cross.target.x86_64-unknown-linux-gnu]
pre-build = ["apt-get update && apt-get install --assume-yes libusb-1.0-0-dev libudev-dev"]

[package.metadata.deb]
section = "utility"
